--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "loader-utils": "^1.1.0",
     "postcss": "^6.0.0",
-    "postcss-load-config": "^1.2.0",
+    "postcss-load-config": "dreammaster82/postcss-load-config",
     "schema-utils": "^0.3.0"
   },
   "devDependencies": {
